# dagster_examples

./: .gitignore  README.md
00_master/: .env.EXAMPLE  dagster.yaml  pyproject.toml  workspace.yaml
00_master/src/definitions/: single_file.py
dagster_docker_test/: README_CONTAINER.md  pyproject.toml  workspace.yaml
dagster_docker_test/docker/: Dockerfile  compose.yml  dagster.yaml
dagster_docker_test/src/definitions/: __init__.py  assets.py
dagster_remote_test/: pyproject.toml
dagster_remote_test/src/: __init__.py
